can update quantity and see total now

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.10.2",
     "firebase": "^8.10.1",
     "foundation-sites": "^6.6.3",
     "jquery": "^3.6.0",
@@ -14,6 +15,7 @@
     "netlify-cli": "^4.4.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-hotjar": "^3.0.1",
